Deprecated methods removed